--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,15 +14,17 @@
             <a class="nav-link" routerLink="/">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/list">List</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/about">About</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <h1>Hello</h1>
   <router-outlet />
   <footer class="text-center mb-3">
-    &copy; {{year}}
+    &copy; Igor Golubovski
   </footer>
 </div>
