--- a/src/app/flight/flight.component.html
+++ b/src/app/flight/flight.component.html
@@ -2,14 +2,64 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a routerLink="home">Home</a>
+                <a routerLink="/">Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a routerLink="{{'/search?d='+flight.destination}}">Flights</a>
+                <a routerLink="/list">Flights</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
                 {{flight.destination}}({{flight.flightNumber}})
             </li>
         </ol>
     </nav>
+    <div class="card mb-3">
+        <div class="row g-0">
+            <div class="col-md-7">
+                <img src="{{webService.getDestinationImage(flight.destination)}}" class="img-fluid rounded-start"
+                    alt="{{flight.destination}}">
+            </div>
+            <div class="col-md-5">
+                <div class="card-body">
+                    <h3 class="card-title">{{flight.destination}}</h3>
+                    <p class="card-text"><small class="text-muted">{{flight.flightKey}}</small></p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <strong>Flight Number: </strong>{{flight.flightNumber}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Scheduled At: </strong>{{webService.formatDate(flight.scheduledAt)}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Estimated At: </strong>{{webService.formatDate(flight.estimatedAt)}}
+                    </li>
+                    <li class="list-group-item" *ngIf="flight.connectedType != '0'">
+                        <strong>Connected Flight: </strong>{{webService.formatDate(flight.connectedFlight)}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Plane Model: </strong> {{webService.formatDate(flight.plane)}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Gate: </strong> {{webService.formatValue(flight.gate)}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Termial: </strong> {{webService.formatValue(flight.gate)}}
+                    </li>
+
+                </ul>
+                <div class="card-body">
+                    <a routerLink="/" class="btn btn-sm btn-primary">
+                        <i class="fa-solid fa-house"></i> Home
+                    </a>
+                    <button type="button" class="btn btn-sm btn-success ms-1">
+                        <i class="fa-solid fa-star"></i> Save to Favorites
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 m-b3">
+        <iframe class="mx-auto" height="320" [src]="getMapUrl() | safe" width="100%" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade" id="gmaps"></iframe>
+    </div>
 </div>
