--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                 <img [src]="[webService.getDestinationImage(flight.destination)]" class="card-img-top" [alt]="flight.destination">
                 <div class="card-body">
                     <h5 class="card-title">{{flight.destination}}({{flight.flightNumber}})</h5>
-                    <p class="card-text"> {{formatDate(flight.scheduledAt!)}}</p>
+                    <p class="card-text"> {{webService.formatDate(flight.scheduledAt!)}}</p>
                 </div>
                 <div class="card-body">
                     <a class="btn btn-primary" [routerLink]="['/flight/'+flight.id]" >
