--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -7,42 +7,55 @@
     </ol>
 </nav>
 <h1 class="h3">Browse Flights</h1>
+<div *ngIf="data">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
 
-<nav aria-label="Page navigation example">
-    <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-</nav>
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>twitter</td>
-        </tr>
-    </tbody>
-</table>
+            <li class="page-item">
+                <button class="page-link" type="button" (click)="first()">First</button>
+            </li>
+            <li class="page-item">
+                <button class="page-link" type="button" (click)="previous()">Previous</button>
+            </li>
+            <li class="page-item">
+                <button class="page-link" type="button" disabled>{{data.number + 1}}</button>
+            </li>
+                        <li class="page-item">
+                <button class="page-link" type="button" (click)="next()" [disabled]="data.last">Next</button>
+            </li>
+
+                        <li class="page-item">
+                <button class="page-link" type="button" (click)="last()" [disabled]="data.first">Last</button>
+            </li>
+
+
+        </ul>
+    </nav>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Flight Number</th>
+                <th scope="col">Destination</th>
+                <th scope="col">Scheduled At</th>
+                <th scope="col">Estimated At</th>
+                <th scope="col">Actions At</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let flight of data.content">
+                <th scope="row">{{flight.id}}</th>
+                <td>{{flight.flightNumber}}</td>
+                <td>{{flight.destination}}</td>
+                <td>{{webService.formatDate(flight.scheduledAt)}}</td>
+                <td>{{webService.formatDate(flight.estimatedAt)}}</td>
+                <td>
+                    <div class="btn-group">
+                        <a routerLink="/flight/{{flight.id}}" class="btn btn-primary">Details</a>
+                    </div>
+                </td>
+            </tr>
+           
+        </tbody>
+    </table>
+</div>
